fix: make nevbar fixed on mobiles

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -279,11 +279,6 @@ section {
   }
 }
 
-
-
-
-
-
 .new-home {
   font-family: 'Poppis', sans-serif;
   display: flex;
@@ -885,7 +880,7 @@ section {
         padding: 12px;
         margin-bottom: 24px;
         box-shadow: 8px 8px 40px rgba(0, 0, 0, 0.1), 
-        -8px -8px 20px rgba(255, 255, 255, 1)!important;
+        -8px -8px 20px rgba(255, 255, 255, .5)!important;
         border: none;
         z-index: 0;
         transition-duration: 1s ease;
@@ -1035,7 +1030,7 @@ section {
   }
 
   .navbar {
-    padding: 0.5rem 0;
+    padding: 0.5rem 2rem!important;
     min-height: 3.5rem;
     
     .logo {
@@ -1162,6 +1157,7 @@ section {
       height: 52%;
     }
   }
+
   .new-home {
     h1 {
       font-size: 1.3rem;
@@ -1214,6 +1210,19 @@ section {
 }
 
 @media (max-width: 991.98px) {
+  .navbar {
+    position: fixed!important;
+    justify-content: space-between;
+
+    .navbar-nav {
+      display: none!important;
+    }
+
+    .burger {
+      display: block!important;
+    }
+  }
+
   .hero__caption {
     position: absolute;
     top: 75%!important;
@@ -1248,19 +1257,6 @@ section {
     .hero__header--small {
       display: none;
       font-size: 41px;
-    }
-  }
-
-
-  .navbar {
-    justify-content: space-between;
-
-    .navbar-nav {
-      display: none;
-    }
-
-    .burger {
-      display: block;
     }
   }
 
@@ -1347,7 +1343,6 @@ section {
           height: 100px;
           width: auto;
           padding: 12px;
-          // border: 4px solid rgb(37, 37, 37);
           border-radius: 12px;
         }
       }
